# kursach-sys-sw

./: .gitignore
103_usb_hid/: Kosmo_hid.axf  Kosmo_hid.build_log.htm  Kosmo_hid.htm  Kosmo_hid.map  Kosmo_hid.uvguix.nik9  Kosmo_hid.uvguix.nss  Kosmo_hid.uvguix.witcher  Kosmo_hid.uvoptx  Kosmo_hid.uvprojx  Kosmo_hid_Target 1.dep  fonts.d  main.crf  main.d  ssd1306.crf  ssd1306.d  startup_stm32f103xb.lst  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_adc.crf  stm32f1xx_hal_adc.d  stm32f1xx_hal_adc_ex.crf  stm32f1xx_hal_adc_ex.d  stm32f1xx_hal_can.crf  stm32f1xx_hal_can.d  stm32f1xx_hal_cec.crf  stm32f1xx_hal_cec.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_crc.crf  stm32f1xx_hal_crc.d  stm32f1xx_hal_dac.crf  stm32f1xx_hal_dac.d  stm32f1xx_hal_dac_ex.crf  stm32f1xx_hal_dac_ex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_eth.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  (+98 more)
103_usb_hid/Inc/: ssd1306.h  usbd_conf.h
103_usb_hid/Src/: main.c  ssd1306.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usbd_custom_hid_if.c
client/: CMakeLists.txt  main.c
server/: CMakeLists.txt  fonts.c  fonts.h  hidwapi.depend  hidwapi.layout  main.c
